// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of a table row 1`] = `
<tr
  className="table-row"
/>
`;

exports[`Table row custom class 1`] = `
<tr
  className="table-row foo"
/>
`;

exports[`Table row droppable and expandable 1`] = `null`;

exports[`Table row droppable and not expandable 1`] = `null`;

exports[`Table row in edit mode and is draggable 1`] = `null`;

exports[`Table row not in edit mode and is draggable 1`] = `null`;

exports[`Table row that allows a selection that is checked 1`] = `
<tr
  className="table-row table-row-selected"
>
  <td
    className="table-cell-view"
  >
    <div
      className="pretty p-icon"
    >
      <input
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="state p-info"
      >
        <i
          className="icon fal fa-check"
        />
        <label />
      </div>
    </div>
  </td>
</tr>
`;

exports[`Table row that allows a selection that is unchecked 1`] = `
<tr
  className="table-row"
>
  <td
    className="table-cell-view"
  >
    <div
      className="pretty p-icon"
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="state p-info"
      >
        <i
          className="icon fal fa-check"
        />
        <label />
      </div>
    </div>
  </td>
</tr>
`;

exports[`Table row that is expandable 1`] = `
<tr
  className="table-row"
>
  <td
    className="table-expand-icon table-btn-border"
    onClick={[Function]}
  >
    <i
      className="fas fa-caret-right fa-2x"
    />
  </td>
</tr>
`;

exports[`Table row with data cells 1`] = `
<tr
  className="table-row"
>
  <td
    className="table-cell-view"
    title="1"
  >
    1
  </td>
</tr>
`;
